hphp/hack/test/typecheck/lsb_protected_disallow_subclass.php.exp
File "lsb_protected_disallow_subclass.php", line 12, characters 15-16:
Cannot access this protected member, you don't extend A (Typing[4112])
File "lsb_protected_disallow_subclass.php", line 4, characters 30-35:
This member is protected
