hphp/hack/test/typecheck/lsb_protected_disallow_subclass.php
<?hh

class A {
  <<__LSB>> protected static string $y = "!";
}

class B extends A {
}

class C {
  public static function foo(): string {
    return B::$y;
  }
}
